--- a/db/persons.yaml
+++ b/db/persons.yaml
@@ -9746,11 +9746,20 @@ persons:
       from: 1988
       to: 1998
       note: Deputy PM; Min. Finance
+    - org: governo-belgio
+      role: minister
+      from: 1988
+      to: 1998
+      note: Ministro Finanze
     - org: bei
       role: executive
       from: 2000
       to: 2011
       note: President
+    - org: bei
+      role: president
+      from: 2000
+      to: 2011
   pier-silvio-berlusconi:
     born: 1969
     nationality: Italia
